--- a/src/app/components/edit/edit.component.html
+++ b/src/app/components/edit/edit.component.html
@@ -20,4 +20,5 @@
         <input type="text" class="form-control" placeholder="Ingresa un autor" formControlName="author" required>
     </div>
     <button type="submit" class="btn btn-success">Actualizar</button>
+    <button type="button" class="btn btn-danger m-2" routerLink="/">Cancelar</button>
 </form>
